--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 <h1>Tytuł</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt mollitia, quaerat tempora, temporibus architecto quas facere aut. Nesciunt nobis, sint hic libero, aliquid ipsa vero placeat. Sit perferendis laborum ea.</p>
 
+Home
+Contact
+About, Other
+
 </body>
 </html>
