--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="OPis" />
     <meta name="keywords" content="" />
     <link rel="stylesheet" href="css/style.css">
-    <meta name="git" content="0.0.2">
+    <meta name="git" content="0.0.3">
 </head>
 <body>
-<h1>Tytuł</h1>
+<h1>Wersja strony 0.0.3</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt mollitia, quaerat tempora, temporibus architecto quas facere aut. Nesciunt nobis, sint hic libero, aliquid ipsa vero placeat. Sit perferendis laborum ea.</p>
 
 Home
